--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.0
 uvicorn==0.32.0
 tensorflow==2.20.0
-numpy==2.0.2
+numpy>=2.1.0
 opencv-python==4.12.0.88
 matplotlib==3.9.4
 pillow==11.3.0
